--- a/css/style.sass
+++ b/css/style.sass
@@ -75,6 +75,10 @@ div[role="main"]
 .li-triple
   width: ($itemWidth * 3) + ($padding * 2)
 
+.ui-sortable-placeholder
+  background: #eee
+  border: 1px solid #f00
+
 .list-item
   background: $itemBase
   @include borderRadius()
